--- a/templates/client_template.j2
+++ b/templates/client_template.j2
@@ -2,7 +2,7 @@
 from http import HTTPStatus
 from typing import Any, Optional, List, Dict
 from api_client import ApiClientServices
-from models import {{ imports | join(', ') }}
+from {{ models_import_path }} import {{ imports | join(', ') }}
 
 class {{ class_name }}(ApiClientServices):
     {% for method in methods %}
