--- a/templates/facade_template.j2
+++ b/templates/facade_template.j2
@@ -2,7 +2,7 @@
 from typing import Optional
 
 {% for imp in imports %}
-from .{{ imp.module_name }} import {{ imp.class_name }}
+from endpoints.{{ imp.module_name }} import {{ imp.class_name }}
 {% endfor %}
 
 class {{ facade_class_name }}:
