--- a/templates/client_template.j2
+++ b/templates/client_template.j2
@@ -4,8 +4,13 @@ from typing import Any, Optional, List, Dict
 from api_client import ApiClientServices
 from {{ models_import_path }} import {{ imports | join(', ') }}
 
+import allure
+
+
 class {{ class_name }}(ApiClientServices):
     {% for method in methods %}
+
+    @allure.step("{{ method.description | replace('\n', '\n' + docstring_indent) }}")
     def {{ method.name }}(self,
                            {% for param in method.method_parameters %}
                            {{ param }},
@@ -20,9 +25,7 @@ class {{ class_name }}(ApiClientServices):
                              {% endif %}
                            {% endif %}
                            status: HTTPStatus = HTTPStatus.{{ method.expected_status }}) -> {{ method.return_type }}:
-        """
-        {{ method.description | replace('\n', '\n' + docstring_indent) }}
-        """
+
         path = f"{{ method.path }}"
         {% if method.http_method == 'GET' %}
         r_json = self.get(
