--- a/src/my_codegen/templates/app_facade.j2
+++ b/src/my_codegen/templates/app_facade.j2
@@ -2,7 +2,7 @@
 from typing import Optional
 
 {% for srv in services %}
-from http_clients.{{ srv.service_name }}.facade import {{ srv.api_class }}
+from codegen.http_clients.{{ srv.service_name }}.facade import {{ srv.api_class }}
 {% endfor %}
 
 
