fix import models

--- a/src/my_codegen/templates/client_template.j2
+++ b/src/my_codegen/templates/client_template.j2
@@ -2,7 +2,7 @@
 from http import HTTPStatus
 from typing import Any, Optional, List, Dict
 from my_codegen.http_clients.api_client import ApiClient
-from my_codegen.{{ models_import_path }} import {{ imports | join(', ') }}
+from {{ models_import_path }} import {{ imports | join(', ') }}
 
 import allure
 
