--- a/src/my_codegen/templates/client_template.j2
+++ b/src/my_codegen/templates/client_template.j2
@@ -26,7 +26,7 @@ class {{ class_name }}(ApiClient):
                            {% endif %}
                            status: HTTPStatus = HTTPStatus.{{ method.expected_status }}) -> {{ method.return_type }}:
 
-        path = f"{{ method.path }}"
+        path = f"/{{ service_name }}{{ method.path }}"
         {% if method.http_method == 'GET' %}
         r_json = self.get(
             path=path,
