--- a/src/my_codegen/templates/client_template.j2
+++ b/src/my_codegen/templates/client_template.j2
@@ -8,6 +8,7 @@ import allure
 
 
 class {{ class_name }}(ApiClient):
+    _module_name = {{ service_name }}
     {% for method in methods %}
 
     @allure.step("{{ method.description | replace('\n', '\n' + docstring_indent) }}")
@@ -26,7 +27,7 @@ class {{ class_name }}(ApiClient):
                            {% endif %}
                            status: HTTPStatus = HTTPStatus.{{ method.expected_status }}) -> {{ method.return_type }}:
 
-        path = f"/{{ service_name }}{{ method.path }}"
+        path = f"{{ _module_name }}{{ method.path }}"
         {% if method.http_method == 'GET' %}
         r_json = self.get(
             path=path,
