--- a/src/my_codegen/templates/client_template.j2
+++ b/src/my_codegen/templates/client_template.j2
@@ -27,7 +27,7 @@ class {{ class_name }}(ApiClient):
                            {% endif %}
                            status: HTTPStatus = HTTPStatus.{{ method.expected_status }}) -> {{ method.return_type }}:
 
-        path = f"{{ _module_name }}{{ method.path }}"
+        path = self._module_name + f"{{ method.path }}"
         {% if method.http_method == 'GET' %}
         r_json = self.get(
             path=path,
