--- a/src/my_codegen/templates/client_template.j2
+++ b/src/my_codegen/templates/client_template.j2
@@ -27,10 +27,10 @@ class {{ class_name }}(ApiClient):
                            {% endif %}
                            status: HTTPStatus = HTTPStatus.{{ method.expected_status }}) -> {{ method.return_type }}:
 
-        path = self._module_name + f"{{ method.path }}"
+        path =f"{{ method.path }}"
         {% if method.http_method == 'GET' %}
         r_json = self.get(
-            path=path,
+            path=self._module_name + path,
             params=params,
             expected_status=status
         )
