--- a/src/my_codegen/templates/client_template.j2
+++ b/src/my_codegen/templates/client_template.j2
@@ -29,14 +29,14 @@ class {{ class_name }}(ApiClient):
 
         path =f"{{ method.path }}"
         {% if method.http_method == 'GET' %}
-        r_json = self.get(
+        r_json = self._get(
             path=self._service + path,
             params=params,
             expected_status=status
         )
         {% elif method.http_method in ['POST', 'PUT', 'PATCH', 'DELETE'] %}
             {% if method.payload_type and method.payload_type.startswith('List[') %}
-        r_json = self.{{ method.http_method.lower() }}(
+        r_json = _self.{{ method.http_method.lower() }}(
             path=self._service + path,
             payload=[item.dict() for item in payload],
             expected_status=status
