--- a/src/my_codegen/templates/client_template.j2
+++ b/src/my_codegen/templates/client_template.j2
@@ -42,7 +42,7 @@ class {{ class_name }}(ApiClient):
             expected_status=status
         )
             {% elif method.payload_type and method.payload_type != 'Any' %}
-        r_json = self.{{ method.http_method.lower() }}(
+        r_json = self._{{ method.http_method.lower() }}(
             path=self._service + path,
             payload=payload.dict() if payload else None,
             expected_status=status
