--- a/src/my_codegen/templates/django_template.j2
+++ b/src/my_codegen/templates/django_template.j2
@@ -30,14 +30,14 @@ class {{ class_name }}(ApiClient):
         {%- if method.http_method == 'GET' %}
         r_json = self._get(
             path=self._service + path,
-            params=query.dict() if query else None,
+            params=query.model_dump(exclude_none=True) if query else None,
             expected_status=status
         )
         {%- elif method.http_method in ['POST', 'PUT', 'PATCH', 'DELETE'] %}
             {% if method.payload_type and method.payload_type.startswith('List[') %}
         r_json = self._{{ method.http_method.lower() }}(
             path=self._service + path,
-            payload=[item.dict() for item in payload],
+            payload=[item.model_dump(exclude_none=True) for item in payload],
             expected_status=status
         )
             {% elif method.payload_type %}
@@ -50,7 +50,7 @@ class {{ class_name }}(ApiClient):
                 {%- else %}
         r_json = self._{{ method.http_method.lower() }}(
             path=self._service + path,
-            payload=payload.dict() if payload else None,
+            payload=payload.model_dump(exclude_none=True) if payload else None,
             expected_status=status
         )
                 {%- endif %}
