--- a/src/my_codegen/templates/client_template.j2
+++ b/src/my_codegen/templates/client_template.j2
@@ -1,71 +1,21 @@
-{% set docstring_indent = '    ' %}
 from http import HTTPStatus
 from typing import Any, Optional, List, Dict
 from my_codegen.http_clients.api_client import ApiClient
 from {{ models_import_path }} import {{ imports | join(', ') }}
-
-import allure
-
+from my_codegen.utils.report_utils import Reporter
 
 class {{ class_name }}(ApiClient):
-    _service = "{{ service_name }}"
-    {% for method in methods %}
+    _service = "{{ service_path }}"
 
-    @allure.step("{{ method.description | replace('\n', '\n' + docstring_indent) }}")
+{% for method in methods %}
+    @Reporter.general_step("{{ method.description }}")
     def {{ method.name }}(self,
-                           {% for param in method.method_parameters %}
-                           {{ param }},
-                           {% endfor %}
-                           {% if method.http_method == 'GET' %}
-                           params: Optional[Dict[str, Any]] = None,
-                           {% else %}
-                             {% if method.payload_type %}
-                           payload: {{ method.payload_type }},
-                             {% else %}
-                           payload: Optional[Any] = None,
-                             {% endif %}
-                           {% endif %}
-                           status: HTTPStatus = HTTPStatus.{{ method.expected_status }}) -> {{ method.return_type }}:
+        {% if method.required_params %}{{ method.required_params | join(',\n        ') }},{% endif %}
+        {% if method.optional_params %}{{ method.optional_params | join(',\n        ') }},{% endif %}
+        headers: Optional[Dict[str, str]] = None,
+        status: HTTPStatus = HTTPStatus.{{ method.expected_status }}) -> {{ method.return_type }}:
+        path = f"{{ method.path }}"
+        {{ method.http_call }}
+        {{ method.return_statement }}
 
-        path =f"{{ method.path }}"
-        {% if method.http_method == 'GET' %}
-        r_json = self._get(
-            path=self._service + path,
-            params=params,
-            expected_status=status
-        )
-        {% elif method.http_method in ['POST', 'PUT', 'PATCH', 'DELETE'] %}
-            {% if method.payload_type and method.payload_type.startswith('List[') %}
-        r_json = self._{{ method.http_method.lower() }}(
-            path=self._service + path,
-            payload=[item.dict() for item in payload],
-            expected_status=status
-        )
-            {% elif method.payload_type and method.payload_type != 'Any' %}
-        r_json = self._{{ method.http_method.lower() }}(
-            path=self._service + path,
-            payload=payload.dict() if payload else None,
-            expected_status=status
-        )
-            {% else %}
-        r_json = self._{{ method.http_method.lower() }}(
-            path=self._service + path,
-            expected_status=status
-        )
-
-            {% endif %}
-        {% endif %}
-
-        {% if method.return_type != 'Any' %}
-            {% if method.return_type.startswith('List[') %}
-        return [{{ method.return_type[5:-1] }}(**item) for item in r_json] \
-            if status == HTTPStatus.{{ method.expected_status }} else r_json
-            {% else %}
-        return {{ method.return_type }}(**r_json) if status == HTTPStatus.{{ method.expected_status }} else r_json
-
-            {% endif %}
-        {% else %}
-        return r_json
-
-        {% endif %}
-    {% endfor %}
+{% endfor %}
