--- a/src/my_codegen/templates/client_template.j2
+++ b/src/my_codegen/templates/client_template.j2
@@ -18,7 +18,9 @@ class {{ class_name }}:
         headers: Optional[Dict[str, str]] = None,
         expected_status: HTTPStatus = HTTPStatus.{{ method.expected_status }}) -> {{ method.return_type }}:
 
-        """{{ method.description }}"""
+        """
+        {{ method.description }}
+        """
 
         {{ method.http_call }}
         {{ method.return_statement }}
