--- a/src/my_codegen/templates/client_template.j2
+++ b/src/my_codegen/templates/client_template.j2
@@ -22,6 +22,8 @@ class {{ class_name }}:
         {{ method.description }}
         """
 
+        {{ method.path_assignment }}
+
         {{ method.http_call }}
         {{ method.return_statement }}
 
