--- a/src/my_codegen/templates/client_template.j2
+++ b/src/my_codegen/templates/client_template.j2
@@ -20,7 +20,7 @@ class {{ class_name }}:
         """
         {{ method.description }}
         """
-        with allure.step("{{ method.summary }}")
+        with allure.step("{{ method.summary }}"):
             {{ method.path_assignment }}
 
             {{ method.http_call }}
