--- a/src/my_codegen/templates/client_template.j2
+++ b/src/my_codegen/templates/client_template.j2
@@ -21,7 +21,7 @@ class {{ class_name }}:
         {{ method.description }}
         """
         with allure.step("{{ method.summary }} ({{ method.method }} {{ method.path_assignment }})"):
-            path="{{ method.path_assignment }}"
+            path=f"{{ method.path_assignment }}"
 
             {{ method.http_call }}
         {{ method.return_statement }}
