refactor naming cases

--- a/src/my_codegen/templates/facade_template.j2
+++ b/src/my_codegen/templates/facade_template.j2
@@ -2,7 +2,7 @@
 from my_codegen.rest_client.client import ApiClient
 
 {% for imp in imports %}
-from .endpoints.{{ imp.module_name }} import {{ imp.class_name }}
+from .{{ imp.module_name }} import {{ imp.class_name }}
 {% endfor %}
 
 
