--- a/src/my_codegen/templates/app_facade.j2
+++ b/src/my_codegen/templates/app_facade.j2
@@ -4,7 +4,7 @@ from typing import Optional
 from my_codegen.rest_client.client import ApiClient
 
 {% for srv in services %}
-from http_clients.{{ srv.service_name }}.facade import {{ srv.api_class }}
+from rest_clients.{{ srv.service_name }}.facade import {{ srv.api_class }}
 {% endfor %}
 
 
