Fix ApiClient import and copy base modules to output

--- a/src/codegen/templates/client_template.j2
+++ b/src/codegen/templates/client_template.j2
@@ -2,7 +2,7 @@ from http import HTTPStatus
 import allure
 
 from typing import Any, Optional, List, Dict
-from my_codegen.rest_client.client import ApiClient
+from rest_client.client import ApiClient
 {% if imports %}
 from {{ models_import_path }} import {{ imports | join(', ') }}
 {% endif %}
